fixed image links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button>Learn more</button>
         </div>
         <div class="hero-image">
-            <img src="../assets/images/main-image.webp" alt="main image">
+            <img src="/assets/images/main-image.webp" alt="main image">
         </div>
     </div>
 </div>
@@ -32,19 +32,19 @@
     <h2>Some Random Information</h2>
     <div class="image-set">
         <div>
-            <img src="../assets/images/bunny-parol.jpg" alt="Bunny parol">
+            <img src="/assets/images/bunny-parol.jpg" alt="Bunny parol">
             <p>The Bunny parol. A Christmas favorite.</p>
         </div>
         <div>
-            <img src="../assets/images/angel-parol.png" alt="Angel parol">
+            <img src="/assets/images/angel-parol.png" alt="Angel parol">
             <p>Angels are another popular motif for parols.</p>
         </div>
         <div>
-            <img src="../assets/images/ufc-parol.png" alt="UFC parol">
+            <img src="/assets/images/ufc-parol.png" alt="UFC parol">
             <p>The UFC Fighter parol. A must-have.</p>
         </div>
         <div>
-            <img src="../assets/images/puppy-parol.png" alt="Puppy parol">
+            <img src="/assets/images/puppy-parol.png" alt="Puppy parol">
             <p>Puppy parol. As cute as they get on Christmas mornings.</p>
         </div>
     </div>
